fix: remove wrong color keyword for select

--- a/src/scss/base/_forms.scss
+++ b/src/scss/base/_forms.scss
@@ -123,7 +123,6 @@ select[multiple] {
 select:not([multiple]) {
   appearance: none;
   background: palette( default, contrast ) no-repeat url("#{map-get( $icons, "select" )}") center right .5em / 1em 1em;
-  color: window;
 }
 
 textarea {
